welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {(a,b,c) match {
  																							case (a,a,a) => 20
  																							case (a,_,a) => 10
                                                case (a,a,_) => 10
  																							case (_,b,b) => 10
  (_,_,_) => 0}
}